[package]
name = "whython-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debugless-unwrap = "0.0.4"
num-format = "0.4.4"
strum_macros = "0.24.3"
colored = "2.0.0"
ctrlc = "3.2.5"
walkdir = "2.3.3"
ignore-result = "0.2.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "atomic_bool_test"
harness = false
